# theforest

./: README.md  main.py  pyproject.toml
assets/: characters.json  drugs.characters.json  drugs.locations.json
textworld/: assets.py  errors.py  formatting.py  locations.json  main.py  map.py  models.py  ollama_utils.py  scratch.py  settings.py  ui.py
textworld/components/: app.py  gamelog.py  minimap.py  playerstatus.py
textworld/components/screens/: gamemenu.py  mainmenu.py  theforestgame.py
textworld/models/: actors.py  components.py  locations.py  simulation.py  theforest.py
textworld/models/actors/: actor.py  llm.py  needs.py  player.py
textworld/tui/components/: app.py  boxlabel.py  gamelog.py  minimap.py  playerstatus.py
textworld/tui/components/screens/: mainmenu.py  theforestgame.py
